--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -198,6 +198,10 @@
     <url-pattern>/OAuthServlet31</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>OAuthServlet32</servlet-name>
+    <url-pattern>/OAuthServlet32</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>del</servlet-name>
     <url-pattern>/del</url-pattern>
   </servlet-mapping>
@@ -404,6 +408,12 @@
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>OAuthServlet31</servlet-name>
     <servlet-class>org.liufeng.course.servlet.OAuthServlet31</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>OAuthServlet32</servlet-name>
+    <servlet-class>org.liufeng.course.servlet.OAuthServlet32</servlet-class>
   </servlet>
   <servlet>
     <description>This is the description of my J2EE component</description>
