springboot profile modify

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -210,6 +210,14 @@
     <url-pattern>/OAuthServlet34</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>OAuthServlet35</servlet-name>
+    <url-pattern>/OAuthServlet35</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>OAuthServlet36</servlet-name>
+    <url-pattern>/OAuthServlet36</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>del</servlet-name>
     <url-pattern>/del</url-pattern>
   </servlet-mapping>
@@ -434,6 +442,18 @@
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>OAuthServlet34</servlet-name>
     <servlet-class>org.liufeng.course.servlet.OAuthServlet34</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>OAuthServlet35</servlet-name>
+    <servlet-class>org.liufeng.course.servlet.OAuthServlet35</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>OAuthServlet36</servlet-name>
+    <servlet-class>org.liufeng.course.servlet.OAuthServlet36</servlet-class>
   </servlet>
   <servlet>
     <description>This is the description of my J2EE component</description>
