springboot profile modify

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -218,6 +218,10 @@
     <url-pattern>/OAuthServlet36</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>OAuthServlet37</servlet-name>
+    <url-pattern>/OAuthServlet37</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>del</servlet-name>
     <url-pattern>/del</url-pattern>
   </servlet-mapping>
@@ -454,6 +458,12 @@
     <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>OAuthServlet36</servlet-name>
     <servlet-class>org.liufeng.course.servlet.OAuthServlet36</servlet-class>
+  </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>OAuthServlet37</servlet-name>
+    <servlet-class>org.liufeng.course.servlet.OAuthServlet37</servlet-class>
   </servlet>
   <servlet>
     <description>This is the description of my J2EE component</description>
